vagrant/k8s/ingress-controller/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: echo-service
spec:
    selector:
      run: echo
    ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
